# netoptim-rs

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  parametric_ai.rs  tiny_digraph_ai.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  llvm-cov.yml
.trunk/: trunk.yaml
benches/: benches.rs
examples/: dijkstra_example.rs  find_negative_cycle.rs  neg_cycle_example.rs  quickcheck_tests.rs  utils_example.rs
src/: dijkstra.rs  error.rs  integration_tests.rs  lib.rs  logging.rs  main.rs  min_cycle_ratio_ai.rs  neg_cycle.rs  neg_cycle_ai.rs  neg_cycle_ai2.rs  neg_cycle_ai3.rs  parametric.rs  parametric_ai.rs  parametric_ai2.rs  parametric_ai3.rs  tests.rs  utils.rs
