[package]
name = "netoptim-rs"
version = "0.1.0"
edition = "2021"
description = "Network Optimization Algorithms in Rust"
repository = "https://github.com/luk036/netoptim-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.106"
num = { version = "0.4.0" }
num-traits = { version = "0.2.15" }

[dependencies.petgraph]
version = "0.6.4"
features = ["serde-1"]
