[package]
name = "netoptim-rs"
version = "0.1.1"
edition = "2021"
description = "Network Optimization Algorithms in Rust"
repository = "https://github.com/luk036/netoptim-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = ["num-traits/std", "dep:env_logger", "dep:log"]

[dependencies]
serde_json = "1.0.128"
num = { version = "0.4.3" }
num-traits = { version = "0.2.19" }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

[dependencies.petgraph]
version = "0.8.0"
features = ["serde-1"]


[dev-dependencies]
quickcheck = "1.0"
