[package]
name = "netoptim-rs"
version = "0.1.2"
edition = "2021"
description = "Network Optimization Algorithms in Rust"
repository = "https://github.com/luk036/netoptim-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "src/doc-header.html"]

[features]
default = ["std"]
std = ["num-traits/std", "dep:env_logger", "dep:log"]

[dependencies]
serde_json = "1.0.150"
serde = { version = "1.0", features = ["derive"] }
num = { version = "0.4.3" }
num-traits = { version = "0.2.19" }
log = { version = "0.4.32", optional = true }
env_logger = { version = "0.11.10", optional = true }

[dependencies.petgraph]
version = "0.8.3"
features = ["serde-1", "stable_graph"]


[dev-dependencies]
quickcheck = "1.0"
criterion = "0.8.2"
